--- a/contact-host.html
+++ b/contact-host.html
@@ -716,23 +716,23 @@
                                     <div class="_emkzyn">
                                       <div class="_4acemm4">
                                         <div
-                                          class="cs3bjhu cfc0w66 dir dir-ltr"
+                                          class="header__search-btn-wrapper header__search-btn-wrapper-text-mw dir dir-ltr"
                                           role="search"
                                           data-testid="little-search"
                                           aria-labelledby="littleSearchLabel"
                                         >
                                           <button
-                                            class="f19g2zq0 dir dir-ltr"
+                                            class="header__search-btn dir dir-ltr"
                                             type="button"
                                           >
                                             <div
-                                              class="f1xx50dm dir dir-ltr"
+                                              class="header__search-btn-wrapper-title dir dir-ltr"
                                               id="littleSearchLabel"
                                             >
                                               Start your search
                                             </div>
                                             <div
-                                              class="s1qcpybl dir dir-ltr"
+                                              class="header__search-btn-wrapper-search-btn dir dir-ltr"
                                               data-icon="true"
                                               data-testid="little-search-icon"
                                             >
@@ -768,7 +768,7 @@
                                           data-nosnippet="true"
                                         >
                                           <form
-                                            class="fxxrw3g dir dir-ltr"
+                                            class="header__search-tabs-form dir dir-ltr"
                                             action="/s/all"
                                             method="get"
                                             role="search"
@@ -833,10 +833,10 @@
                                               id="search-tabpanel"
                                               role="tabpanel"
                                               tabindex="0"
-                                              class="c1lt77mq c1oqx6sn dir dir-ltr"
+                                              class="header__search-tabs-filter header__search-tabs-filter-hide dir dir-ltr"
                                               data-panel-bounds="true"
                                             >
-                                              <div class="i1wnljx3 dir dir-ltr">
+                                              <div class="header__search-tabs-filters dir dir-ltr">
                                                 <div class="_1jkbosm7">
                                                   <div class="_1rwlbyy">
                                                     <label
@@ -1438,31 +1438,31 @@
                                                   </div>
                                                 </div>
                                                 <div
-                                                  class="sv3mkdx dir dir-ltr"
+                                                  class="header__search-tabs-filter-hr dir dir-ltr"
                                                 ></div>
                                                 <div
-                                                  class="chdozwg dir dir-ltr"
+                                                  class="header__search-tabs-filter-dates-container dir dir-ltr"
                                                 >
                                                   <div
-                                                    class="c2frgdd dir dir-ltr"
+                                                    class="header__search-tabs-filter-content dir dir-ltr"
                                                   >
                                                     <div
-                                                      class="b192dx2b b174x59c dir dir-ltr"
+                                                      class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive dir dir-ltr"
                                                       role="button"
                                                       tabindex="0"
                                                       aria-expanded="false"
                                                       data-testid="structured-search-input-field-split-dates-0"
                                                     >
                                                       <div
-                                                        class="c11if3v5 dir dir-ltr"
+                                                        class="header__search-tabs-filter-btn-content dir dir-ltr"
                                                       >
                                                         <div
-                                                          class="l1vto4to dir dir-ltr"
+                                                          class="header__search-tabs-filter-btn-label dir dir-ltr"
                                                         >
                                                           Check in
                                                         </div>
                                                         <div
-                                                          class="p1kudodg dir dir-ltr"
+                                                          class="header__search-tabs-filter-btn-text dir dir-ltr"
                                                         >
                                                           Add dates
                                                         </div>
@@ -1470,28 +1470,28 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="sv3mkdx dir dir-ltr"
+                                                    class="header__search-tabs-filter-hr dir dir-ltr"
                                                   ></div>
                                                   <div
-                                                    class="c2frgdd dir dir-ltr"
+                                                    class="header__search-tabs-filter-content dir dir-ltr"
                                                   >
                                                     <div
-                                                      class="b192dx2b b174x59c dir dir-ltr"
+                                                      class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive dir dir-ltr"
                                                       role="button"
                                                       tabindex="0"
                                                       aria-expanded="false"
                                                       data-testid="structured-search-input-field-split-dates-1"
                                                     >
                                                       <div
-                                                        class="c11if3v5 dir dir-ltr"
+                                                        class="header__search-tabs-filter-btn-content dir dir-ltr"
                                                       >
                                                         <div
-                                                          class="l1vto4to dir dir-ltr"
+                                                          class="header__search-tabs-filter-btn-label dir dir-ltr"
                                                         >
                                                           Check out
                                                         </div>
                                                         <div
-                                                          class="p1kudodg dir dir-ltr"
+                                                          class="header__search-tabs-filter-btn-text dir dir-ltr"
                                                         >
                                                           Add dates
                                                         </div>
@@ -1500,35 +1500,35 @@
                                                   </div>
                                                 </div>
                                                 <div
-                                                  class="sv3mkdx dir dir-ltr"
+                                                  class="header__search-tabs-filter-hr dir dir-ltr"
                                                 ></div>
                                                 <div
-                                                  class="c2frgdd crbzydf dir dir-ltr"
+                                                  class="header__search-tabs-filter-content crbzydf dir dir-ltr"
                                                 >
                                                   <div
-                                                    class="b192dx2b b174x59c bkmyqgh dir dir-ltr"
+                                                    class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive bkmyqgh dir dir-ltr"
                                                     role="button"
                                                     tabindex="0"
                                                     aria-expanded="false"
                                                     data-testid="structured-search-input-field-guests-button"
                                                   >
                                                     <div
-                                                      class="c11if3v5 dir dir-ltr"
+                                                      class="header__search-tabs-filter-btn-content dir dir-ltr"
                                                     >
                                                       <div
-                                                        class="l1vto4to dir dir-ltr"
+                                                        class="header__search-tabs-filter-btn-label dir dir-ltr"
                                                       >
                                                         Who
                                                       </div>
                                                       <div
-                                                        class="p1kudodg dir dir-ltr"
+                                                        class="header__search-tabs-filter-btn-text dir dir-ltr"
                                                       >
                                                         Add guests
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="s1i622mb dir dir-ltr"
+                                                    class="header__search-tabs-filter-searchBtn-container dir dir-ltr"
                                                   >
                                                     <button
                                                       class="_4eosylk"
