--- a/merchandising.html
+++ b/merchandising.html
@@ -4201,7 +4201,7 @@
                               >
                                 <div class="c1kn6kxw dir dir-ltr">
                                   <header
-                                    class="header cxy853f c1g36qz5 dir dir-ltr"
+                                    class="header header__search-tabs-hide c1g36qz5 dir dir-ltr"
                                   >
                                     <div class="cdfwt5b header__container dir dir-ltr">
                                       <div class="header__brand-wrapper dir dir-ltr">
@@ -4252,7 +4252,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="cwdm1ai dir dir-ltr">
+                                      <div class="header__search-wrapper dir dir-ltr">
                                         <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
@@ -4266,7 +4266,7 @@
                                             >
                                               <div class="_4acemm4">
                                                 <div
-                                                  class="cs3bjhu cfc0w66 dir dir-ltr"
+                                                  class="header__search-btn-wrapper header__search-btn-wrapper-text-mw dir dir-ltr"
                                                   role="search"
                                                   data-testid="little-search"
                                                   aria-labelledby="littleSearchLabel"
@@ -4276,7 +4276,7 @@
                                                     id="littleSearchLabel"
                                                     >Start your search</span
                                                   ><button
-                                                    class="f19g2zq0 dir dir-ltr"
+                                                    class="header__search-btn dir dir-ltr"
                                                     data-index="0"
                                                     type="button"
                                                   >
@@ -4285,15 +4285,15 @@
                                                       >Location</span
                                                     >
                                                     <div
-                                                      class="f1xx50dm dir dir-ltr"
+                                                      class="header__search-btn-wrapper-title dir dir-ltr"
                                                     >
                                                       Anywhere
                                                     </div></button
                                                   ><span
-                                                    class="dc65r8z dir dir-ltr"
+                                                    class="header__search-btn-wrapper-hr dir dir-ltr"
                                                   ></span
                                                   ><button
-                                                    class="f19g2zq0 dir dir-ltr"
+                                                    class="header__search-btn dir dir-ltr"
                                                     data-index="1"
                                                     type="button"
                                                   >
@@ -4303,15 +4303,15 @@
                                                       out</span
                                                     >
                                                     <div
-                                                      class="f1xx50dm dir dir-ltr"
+                                                      class="header__search-btn-wrapper-title dir dir-ltr"
                                                     >
                                                       Anytime
                                                     </div></button
                                                   ><span
-                                                    class="dc65r8z dir dir-ltr"
+                                                    class="header__search-btn-wrapper-hr dir dir-ltr"
                                                   ></span
                                                   ><button
-                                                    class="f19g2zq0 dir dir-ltr"
+                                                    class="header__search-btn dir dir-ltr"
                                                     data-index="2"
                                                     type="button"
                                                   >
@@ -4320,12 +4320,12 @@
                                                       >Guests</span
                                                     >
                                                     <div
-                                                      class="f1xx50dm f1rzp9sv dir dir-ltr"
+                                                      class="header__search-btn-wrapper-title header__search-btn-wrapper-add-guests dir dir-ltr"
                                                     >
                                                       Add guests
                                                     </div>
                                                     <div
-                                                      class="s1qcpybl dir dir-ltr"
+                                                      class="header__search-btn-wrapper-search-btn dir dir-ltr"
                                                       data-icon="true"
                                                       data-testid="little-search-icon"
                                                     >
@@ -4358,13 +4358,13 @@
                                               <div class="_1up2wiaw hidden">
                                                 <div data-nosnippet="true">
                                                   <div
-                                                    class="i1w9pu8s dir dir-ltr"
+                                                    class="header__search-tabs-wrapper dir dir-ltr"
                                                   >
                                                     <div
-                                                      class="ig7p4nx i1o72d44 dir dir-ltr"
+                                                      class="header__search-tabs-container header__search-tabs-container-control dir dir-ltr"
                                                     >
                                                       <form
-                                                        class="fxxrw3g dir dir-ltr"
+                                                        class="header__search-tabs-form dir dir-ltr"
                                                         action="/s/all"
                                                         method="get"
                                                         role="search"
@@ -4448,14 +4448,14 @@
                                                           id="search-tabpanel"
                                                           role="tabpanel"
                                                           tabindex="0"
-                                                          class="c1lt77mq c1oqx6sn dir dir-ltr"
+                                                          class="header__search-tabs-filter header__search-tabs-filter-hide dir dir-ltr"
                                                           data-panel-bounds="true"
                                                         >
                                                           <div
-                                                            class="i1wnljx3 dir dir-ltr"
+                                                            class="header__search-tabs-filters dir dir-ltr"
                                                           >
                                                             <div
-                                                              class="qtt9tup dir dir-ltr"
+                                                              class="header__search-tabs-filter-where-container dir dir-ltr"
                                                             >
                                                               <div
                                                                 class="_1rwlbyy"
@@ -4786,31 +4786,31 @@
                                                               </div>
                                                             </div>
                                                             <div
-                                                              class="sv3mkdx dir dir-ltr"
+                                                              class="header__search-tabs-filter-hr dir dir-ltr"
                                                             ></div>
                                                             <div
-                                                              class="chdozwg dir dir-ltr"
+                                                              class="header__search-tabs-filter-dates-container dir dir-ltr"
                                                             >
                                                               <div
-                                                                class="c2frgdd dir dir-ltr"
+                                                                class="header__search-tabs-filter-content dir dir-ltr"
                                                               >
                                                                 <div
-                                                                  class="b192dx2b b174x59c dir dir-ltr"
+                                                                  class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive dir dir-ltr"
                                                                   role="button"
                                                                   tabindex="0"
                                                                   aria-expanded="false"
                                                                   data-testid="structured-search-input-field-split-dates-0"
                                                                 >
                                                                   <div
-                                                                    class="c11if3v5 dir dir-ltr"
+                                                                    class="header__search-tabs-filter-btn-content dir dir-ltr"
                                                                   >
                                                                     <div
-                                                                      class="l1vto4to dir dir-ltr"
+                                                                      class="header__search-tabs-filter-btn-label dir dir-ltr"
                                                                     >
                                                                       Check in
                                                                     </div>
                                                                     <div
-                                                                      class="p1kudodg dir dir-ltr"
+                                                                      class="header__search-tabs-filter-btn-text dir dir-ltr"
                                                                     >
                                                                       Add dates
                                                                     </div>
@@ -4818,28 +4818,28 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="sv3mkdx dir dir-ltr"
+                                                                class="header__search-tabs-filter-hr dir dir-ltr"
                                                               ></div>
                                                               <div
-                                                                class="c2frgdd dir dir-ltr"
+                                                                class="header__search-tabs-filter-content dir dir-ltr"
                                                               >
                                                                 <div
-                                                                  class="b192dx2b b174x59c dir dir-ltr"
+                                                                  class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive dir dir-ltr"
                                                                   role="button"
                                                                   tabindex="0"
                                                                   aria-expanded="false"
                                                                   data-testid="structured-search-input-field-split-dates-1"
                                                                 >
                                                                   <div
-                                                                    class="c11if3v5 dir dir-ltr"
+                                                                    class="header__search-tabs-filter-btn-content dir dir-ltr"
                                                                   >
                                                                     <div
-                                                                      class="l1vto4to dir dir-ltr"
+                                                                      class="header__search-tabs-filter-btn-label dir dir-ltr"
                                                                     >
                                                                       Check out
                                                                     </div>
                                                                     <div
-                                                                      class="p1kudodg dir dir-ltr"
+                                                                      class="header__search-tabs-filter-btn-text dir dir-ltr"
                                                                     >
                                                                       Add dates
                                                                     </div>
@@ -4848,35 +4848,35 @@
                                                               </div>
                                                             </div>
                                                             <div
-                                                              class="sv3mkdx dir dir-ltr"
+                                                              class="header__search-tabs-filter-hr dir dir-ltr"
                                                             ></div>
                                                             <div
-                                                              class="c2frgdd crbzydf dir dir-ltr"
+                                                              class="header__search-tabs-filter-content crbzydf dir dir-ltr"
                                                             >
                                                               <div
-                                                                class="b192dx2b b174x59c bkmyqgh dir dir-ltr"
+                                                                class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive bkmyqgh dir dir-ltr"
                                                                 role="button"
                                                                 tabindex="0"
                                                                 aria-expanded="false"
                                                                 data-testid="structured-search-input-field-guests-button"
                                                               >
                                                                 <div
-                                                                  class="c11if3v5 dir dir-ltr"
+                                                                  class="header__search-tabs-filter-btn-content dir dir-ltr"
                                                                 >
                                                                   <div
-                                                                    class="l1vto4to dir dir-ltr"
+                                                                    class="header__search-tabs-filter-btn-label dir dir-ltr"
                                                                   >
                                                                     Who
                                                                   </div>
                                                                   <div
-                                                                    class="p1kudodg dir dir-ltr"
+                                                                    class="header__search-tabs-filter-btn-text dir dir-ltr"
                                                                   >
                                                                     Add guests
                                                                   </div>
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="s1i622mb dir dir-ltr"
+                                                                class="header__search-tabs-filter-searchBtn-container dir dir-ltr"
                                                               >
                                                                 <button
                                                                   class="_4eosylk"
