--- a/places.html
+++ b/places.html
@@ -92,23 +92,23 @@
                             <div class="_emkzyn">
                               <div class="_4acemm4">
                                 <div
-                                  class="cs3bjhu cfc0w66 dir dir-ltr"
+                                  class="header__search-btn-wrapper header__search-btn-wrapper-text-mw dir dir-ltr"
                                   role="search"
                                   data-testid="little-search"
                                   aria-labelledby="littleSearchLabel"
                                 >
                                   <button
-                                    class="f19g2zq0 dir dir-ltr"
+                                    class="header__search-btn dir dir-ltr"
                                     type="button"
                                   >
                                     <div
-                                      class="f1xx50dm dir dir-ltr"
+                                      class="header__search-btn-wrapper-title dir dir-ltr"
                                       id="littleSearchLabel"
                                     >
                                       Start your search
                                     </div>
                                     <div
-                                      class="s1qcpybl dir dir-ltr"
+                                      class="header__search-btn-wrapper-search-btn dir dir-ltr"
                                       data-icon="true"
                                       data-testid="little-search-icon"
                                     >
